Changed Runtime.exec() to use ProcessBuilder for correct escaping for Linux